--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,10 +24,12 @@ input {
   margin-bottom: 1em;
 }
 #content {
-  background-color: #fff;
-  border: 10px solid #ccc;
-  padding: 10px 10px 20px 10px;
+background-color: #fff; border: 10px solid #ccc; padding: 10px;
+overflow: hidden; /* added */
 }
+* html #content { /* added */
+  height: 1%; /* added */
+} /* added */
 
 #notification {
   border: 5px solid #9c9;
