--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -21,6 +21,14 @@
 </p>
 <p>
   <%= link_to @story.link, @story.link %>
+
+<% unless @story.tag_list.empty? %>
+  <p class="tags">
+    <strong>Tags:</strong>
+    <%= @story.tag_list %>
+  </p>
+<% end %>
+
 </p>
 <% if logged_in? %>
   <div id="vote_form">
